--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -501,3 +501,71 @@ footer {
 	position: relative;
 }
 
+/* article
+************************* */
+.article-box {
+	margin-bottom: 30px;
+	border-bottom: 1px dotted #EDA29F;
+	display: inline-block;
+	width: 100%;
+	transition: all 0.25s ease;
+	box-shadow: inset 0 0 0 0 #232323;
+}
+.article-box:hover {
+	cursor: pointer;
+}
+@media screen and (min-width: 960px) {
+	.article-box:hover {
+		box-shadow: inset 960px 0 0 0 #fff;
+   }
+}
+.article-box .left {
+	float: left;
+	width: 150px;
+	height: 150px;
+	background-color: #00AFD7;
+}
+.article-box .right {
+	margin-left: 150px;
+	padding: 15px;
+	color: #00AFD7;
+	margin-top: -20px;
+}
+.article-box .right .date {
+	margin-top: -15px;
+	margin-bottom: 20px;
+	font-size: 12px;
+}
+.article-box .right h3 {
+	color: #00AFD7;
+}
+
+/* post
+************************* */
+
+.container-post .content {
+	padding: 20px;
+}
+.container-post .content h1 {
+	color: #00AFD7;
+	margin-bottom: 30px;
+	line-height: 50px;
+}
+.container-post .content h2 {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	line-height: 30px;
+	color: #232323;
+}
+.container-post .content h3 {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	line-height: 25px;
+	color: #EDA29F;
+}
+.container-post .content p {
+	margin-bottom: 10px;
+	font-size: 18px;
+	line-height: 30px;
+	text-align: justify;
+}
